[gd_scene load_steps=8 format=3 uid="uid://bw4dy8dlwnm58"]

[ext_resource type="Script" path="res://Common/Dash/dash.gd" id="1_q37i0"]
[ext_resource type="Texture2D" uid="uid://bu3lphskcy0q2" path="res://Common/Dash/dust.png" id="2_mcnyw"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_136bj"]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_puxp3"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_21h46"]
gradient = SubResource("Gradient_puxp3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l0qyd"]
lifetime_randomness = 0.7
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 360.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 0.999984
gravity = Vector3(0, 0, 0)
scale_min = 1.1
scale_max = 1.5
color_ramp = SubResource("GradientTexture1D_21h46")
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dy1qt"]
lifetime_randomness = 0.7
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 7.0
angle_min = 1.07288e-05
angle_max = 360.0
initial_velocity_min = 30.0
initial_velocity_max = 30.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 0.999984
gravity = Vector3(0, 0, 0)
scale_min = 1.1
scale_max = 1.5
color_ramp = SubResource("GradientTexture1D_21h46")
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="Dash" type="Node2D"]
script = ExtResource("1_q37i0")

[node name="DurationTimer" type="Timer" parent="."]

[node name="GhostTimer" type="Timer" parent="."]

[node name="DustTrail" type="GPUParticles2D" parent="."]
z_index = -1
material = SubResource("CanvasItemMaterial_136bj")
emitting = false
process_material = SubResource("ParticleProcessMaterial_l0qyd")
texture = ExtResource("2_mcnyw")
lifetime = 1.2
one_shot = true
explosiveness = 0.8

[node name="DustBurst" type="GPUParticles2D" parent="."]
z_index = -1
material = SubResource("CanvasItemMaterial_136bj")
emitting = false
amount = 14
process_material = SubResource("ParticleProcessMaterial_dy1qt")
texture = ExtResource("2_mcnyw")
lifetime = 1.2
one_shot = true
explosiveness = 1.0

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
